--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "postcss": "^8.4.30",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
