--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2"
   }
 }
